<resources>
    <string name="app_name">Travel alternatives</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="short_departure">Departure in</string>
    <string name="short_arrival">Travel time</string>
    <string name="info">Info</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="station_name">Station</string>
    <string name="delay">Delay</string>

    <string-array name="stationNames">
        <item>Malmö C</item>
        <item>Lund C</item>
        <item>Halmstad C</item>
        <item>Köpenhamn C</item>
    </string-array>

    <string-array name="stationNumbers">
        <item>80000</item>
        <item>81216</item>
        <item>13003</item>
        <item>45007</item>
    </string-array>

</resources>
