<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.mah.idk.assignment_3.MainFragment"
    android:background="#fffff8f1"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            />

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/stationNames"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/textViewTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            />

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/stationNames"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#ff805a56"
            android:layout_marginTop="6dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/textViewDeparture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/short_departure"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/textViewArrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/short_arrival"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/info"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:layout_weight="1"
                />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ff805a56"/>

        <ExpandableListView
            android:id="@+id/expandableListViewJourneys"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:groupIndicator="@null"
            android:divider="#ffbc9d9f"
            android:dividerHeight="1dp" />

    </LinearLayout>

</FrameLayout>
